로딩바 구현

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square-round.css"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/5ce38d564d.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
