--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
       href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square-round.css"
       rel="stylesheet"
     />
+
     <script
       src="https://kit.fontawesome.com/5ce38d564d.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=39104704896bb0fa4820e366dc5d110c&autoload=false&libraries=services"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
